# pico-hx

./: .gitmodules  README.md
pcb/: .gitignore  fp-lib-table  pico-hx.kicad_pcb  pico-hx.pro  pico-hx.sch  sym-lib-table
pcb/lib/: RPi_Pico.lib
rtl/data/: picohx.pcf
rtl/demo/: .gitignore  Makefile  debouncer.v  picohx_demo_top.v
scripts/: picoprog.py
software/: .gitignore  CMakeLists.txt  default_bitstream.h  fpga_spi.c  fpga_spi.h  main.c  phx_gpio.h  spi.pio  usb_descriptors.c  usb_programmer.c  usb_programmer.h  usb_uart.c  usb_uart.h
